# a22207399

./: .gitignore  README.md  pyproject.toml  setup.py
html/: networks.html  preprocessing.html  visualization.html
image_network_library/: ViT.py  VitSmallDataset.py  __init__.py  networks.py  preprocessing.py  tests.py  visualization.py
image_network_library/networks/: deepvit.py  mobile_vit.py  networks.py
samples/img/: via_project_12Dec2022_19h12m_json.json
samples/presentation/: via_project_16Dec2022_18h28m_json.json
src/: networks.py  read_data.py
tests/: preprocessing_test.py  unit_tests.py  visualization_test.py
