[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ImageNetworkLibrary"
version = "1.0.3"
description = "Image Processing Library with neural networks and pre processing methods"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["network", "image", "ai", "dataset"]
authors = [
  {email = "shazia.sulemane@gmail.com"},
  {name = "Shazia Sulemane"}
]
maintainers = [
  {name = "Shazia Sulemane", email = "shazia.sulemane@gmail.com"}
]
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
  "opencv_python>4.7",
  "tensorflow",
  "statistics"
]

[project.optional-dependencies]
dev = [
  "pdoc",
  "pytest",
  "coverage",
  "pytest-cov"
]

[project.urls]
homepage = "https://github.com/ShaziaSulemane/a22207399"
documentation = "https://github.com/ShaziaSulemane/a22207399"
repository = "https://github.com/ShaziaSulemane/a22207399"

[tool.setuptools]
packages = ["image_network_library"]

[project.entry-points.'myapp.plugins']
a = 'myapp_plugin_a'

#https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/